# weave-ai-runtime

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml
.github/workflows/: publish-public-packages.yml
.local/: README.md
demos/: README.md
demos/_shared/: __init__.py  bootstrap.py  common.py  scripted_model.py
demos/agents/: __init__.py  file_backed_agent_demo.py  scoped_agent_delegation_demo.py
demos/hooks/: __init__.py  host_registered_hook_demo.py  runtime_config_hook_demo.py  session_register_hook_demo.py
demos/hosts/: minimal_host_bound_demo.py
demos/projects/: __init__.py  coding_workflow_demo.py  release_workflow_demo.py
demos/runtime/: assembly_diagnostics_demo.py  durable_resume_demo.py  stream_report_session_demo.py
demos/skills/: __init__.py  file_backed_skill_demo.py  inline_skill_hook_demo.py  inline_vs_fork_skill_demo.py
demos/tools/: __init__.py  file_backed_tool_demo.py  guarded_tool_demo.py
docs/: README.md  current-system-architecture.md  layered-memory-runtime-v2.md  layered-memory-weavert-v2.md  repository-workspace-layout.md  runtime-contract-appendix.md  runtime-control-plane-extension-guide.md  runtime-definition-authoring-guide.md  runtime-hook-configuration-platform.md  runtime-integration-guide.md  runtime-migration-notes.md  runtime-user-extension-guide.md  weavert-control-plane-extension-guide.md  weavert-definition-authoring-guide.md  weavert-demo-validation-findings.md  weavert-hook-configuration-platform.md  weavert-integration-guide.md  weavert-migration-notes.md  weavert-openai-responses-adapter.md  weavert-runtime-validation-findings.md  weavert-scenario-runtime-pack-architecture.md  weavert-scenario-runtime-pack-quickstart.md  weavert-starter-scaffolds.md  weavert-user-extension-guide.md  weavert-workflow-observability.md
docs/architecture/: overview.md  package-system.md  persistence-and-state.md  request-lifecycle.md
docs/concepts/: hosts-permissions-memory.md  memory-model.md  packages-and-scenario-packs.md  runtime-model.md  tools-agents-skills.md
docs/deep-dives/: README.md  current-system-architecture.md  layered-memory-weavert-v2.md  weavert-control-plane-extension-guide.md  weavert-definition-authoring-guide.md  weavert-hook-configuration-platform.md  weavert-integration-guide.md  (+5 more)
examples/: README.md  README.zh-CN.md  __init__.py
scripts/: check_workspace_layout.py  openai_responses_live_smoke.py
tests/: README.md  README.zh-CN.md  conftest.py  runtime_protocol_harness.py  test_agent_execution_contract.py  test_agent_skill_runtime.py  test_builtin_tools.py  test_child_run_continuation.py  test_code_assistant_app_demo.py  test_compaction_control_plane.py  test_core_package_boundaries.py  test_discovery.py  test_interactive_control_plane.py  test_invocation_catalog.py  test_job_control_plane.py  test_memory_runtime.py  test_openai_client.py  test_packaging_compatibility.py  test_permission_policies.py  test_permission_presets.py  test_query_message_protocol.py  test_query_runtime_protocol_golden.py  test_query_turn_stream.py  test_recovery_and_context_control_plane.py  test_registries.py  test_result_projections.py  test_runtime_control_plane.py  test_runtime_extension_demos.py  test_runtime_hook_authoring_helpers.py  test_runtime_hook_configuration_platform.py  test_runtime_isolation.py  test_runtime_kernel.py  test_runtime_package_protocols.py  test_runtime_team_mode.py  test_scenario_runtime_packs.py  test_session_ingress.py  test_session_runtime.py  test_starter_scaffolds.py  test_streaming_tool_runtime.py  test_task_list_control_plane.py  (+7 more)
upstreams/: README.md  README.zh-CN.md
(+866 files in other folders)
